--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^3.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^8.0.2",
     "react-router-dom": "^7.12.0"
   },
